--- a/web/css/basic.css
+++ b/web/css/basic.css
@@ -7,6 +7,11 @@ h1,h2,h3,h4 { color: #286090; }
 .jumbotron h1 { color: #286090; }
 label { font-weight: normal; color: #286090; }
 
+.dt-header { background-color: #286090; color: #e7e7e7;}
+.dt-body { padding-top: 8px; padding-bottom: 8px; color: #286090; border-top: 1px solid #ccc; }
+.mn-hover-line:hover { background-color: #F2F2F2; }
+
+
 /* ### CHANGE NAVBAR COLORS ### */
 .navbar-default { background-color: #286090; border-color: #204d74; }
 /* title */
